# bedrock-rtl

./: .bazelignore  .bazelrc  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  BUILD.bazel  CONTRIBUTING.md  DEVELOPING.md  DEVELOPMENT.md  Dockerfile  LIBRARIES.adoc  LIBRARIES.md  MACROS.adoc  MACROS.md  MAINTAINERS.md  MODULE.bazel  PPA.md  PPA_ASAP7_RVT_TT.md  README.adoc  README.md  SCRIPTS.adoc  SCRIPTS.md  SECURITY.md  WORKSPACE.bzlmod  adoc_to_docx.sh  bazelrc  check_env.py  elab_test_jg_custom_header.verific.tcl  filelist.txt  filelist_paths.txt  format_strings.py  generate_filelist.sh  package_sources.py  package_sources_test.py  requirements.in  requirements_3_12.in  requirements_lock_3_12.txt  run_chipstack_formal.sh  vcf_2025_env.sh  (+1 more)
amba/fpv/: BUILD.bazel  br_amba_apb_timing_slice_fpv_monitor.sv  br_amba_atb_funnel_fpv.jg.tcl  br_amba_atb_funnel_fpv_monitor.sv  br_amba_axi2axil_first_error_fpv_repro.sv  br_amba_axi2axil_fpv.jg.tcl  br_amba_axi2axil_fpv.tcl  br_amba_axi2axil_fpv_monitor.sv  br_amba_axi_default_target_fpv.jg.tcl  br_amba_axi_default_target_fpv_monitor.sv  br_amba_axi_demux_fpv.jg.tcl  br_amba_axi_demux_fpv_monitor.sv  br_amba_axi_isolate_mgr_fpv.jg.tcl  br_amba_axi_isolate_mgr_fpv_monitor.sv  br_amba_axi_isolate_sub_fpv.jg.tcl  br_amba_axi_isolate_sub_fpv_monitor.sv  br_amba_axi_shrinker_fpv.jg.tcl  br_amba_axi_shrinker_fpv_monitor.sv  br_amba_axi_timing_slice_fpv.jg.tcl  br_amba_axi_timing_slice_fpv_monitor.sv  br_amba_axil2apb_fpv.jg.tcl  br_amba_axil2apb_fpv_monitor.sv  br_amba_axil_default_target_fpv.jg.tcl  br_amba_axil_default_target_fpv_monitor.sv  br_amba_axil_msi_fpv.jg.tcl  br_amba_axil_msi_fpv_monitor.sv  br_amba_axil_split_branch_addr_stability_fpv_repro.sv  br_amba_axil_split_fpv.jg.tcl  br_amba_axil_split_fpv_monitor.sv  br_amba_axil_timing_slice_fpv.jg.tcl  br_amba_axil_timing_slice_fpv_monitor.sv  br_amba_axil_write_arbiter_fpv.jg.tcl  br_amba_axil_write_arbiter_fpv_monitor.sv  br_apb_demux_fpv.jg.tcl  br_apb_demux_fpv_monitor.sv  br_apb_demux_select_onehot_fpv_monitor.sv  isolate_axi_protocol_fv_check.sv  up_down_fv_check.sv
amba/rtl/: BUILD.bazel  br_amba_apb_timing_slice.sv  br_amba_atb_funnel.sv  br_amba_axi2axil.sv  br_amba_axi_default_target.sv  br_amba_axi_demux.sv  br_amba_axi_iso_ds.sv  br_amba_axi_isolate_mgr.sv  br_amba_axi_isolate_sub.sv  br_amba_axi_shrinker.sv  br_amba_axi_timing_slice.sv  br_amba_axil2apb.sv  br_amba_axil_default_target.sv  br_amba_axil_msi.sv  br_amba_axil_split.sv  br_amba_axil_timing_slice.sv  br_amba_axil_write_arbiter.sv  br_amba_pkg.sv  br_apb_demux.sv  br_apb_demux_select_onehot.sv
amba/sim/: BUILD  BUILD.bazel  br_amba_apb_timing_slice_tb.sv  br_amba_atb_funnel_tb.sv  br_amba_axi2axil_tb.sv  br_amba_axi_default_target_tb.sv  br_amba_axi_demux_tb.sv  br_amba_axi_isolate_mgr_tb.sv  br_amba_axi_isolate_sub_tb.sv  br_amba_axi_shrinker_tb.sv  br_amba_axi_timing_slice_tb.sv  br_amba_axil2apb_sim_pkg.sv  br_amba_axil2apb_tb.sv  br_amba_axil_default_target_tb.sv  br_amba_axil_split_sim_pkg.sv  br_amba_axil_split_tb.sv  br_amba_axil_timing_slice_tb.sv  br_amba_axil_write_arbiter_tb.sv  br_apb_demux_tb.sv
arb/fpv/: BUILD.bazel  arb_basic_fpv_monitor.sv  br_arb_fixed_fpv.jg.tcl  br_arb_fixed_fpv.tcl  br_arb_fixed_fpv.vcf.tcl  br_arb_fixed_fpv_monitor.sv  br_arb_grant_hold_fpv_monitor.sv  br_arb_lru_fpv.jg.tcl  br_arb_lru_fpv.tcl  br_arb_lru_fpv.vcf.tcl  br_arb_lru_fpv_monitor.sv  br_arb_multi_rr_fpv.jg.tcl  br_arb_multi_rr_fpv.tcl  br_arb_multi_rr_fpv.vcf.tcl  br_arb_multi_rr_fpv_monitor.sv  br_arb_pri_rr_fpv.jg.tcl  br_arb_pri_rr_fpv.tcl  br_arb_pri_rr_fpv.vcf.tcl  br_arb_pri_rr_fpv_monitor.sv  br_arb_rr_fpv.tcl  br_arb_rr_fpv.vcf.tcl  br_arb_rr_fpv_monitor.sv  br_arb_rr_sby_harness.sv  br_arb_weighted_lru_fpv.vcf.tcl  br_arb_weighted_lru_fpv_monitor.sv  br_arb_weighted_rr_fpv.jg.tcl  br_arb_weighted_rr_fpv.tcl  br_arb_weighted_rr_fpv.vcf.tcl  br_arb_weighted_rr_fpv_monitor.sv  lru_basic_fpv_monitor.sv  rr_basic_fpv_monitor.sv
arb/rtl/: BUILD.bazel  br_arb_fixed.sv  br_arb_grant_hold.sv  br_arb_hold_rr.sv  br_arb_hold_weighted_rr.sv  br_arb_lru.sv  br_arb_multi_rr.sv  br_arb_pri_rr.sv  br_arb_rr.sv  br_arb_weighted_lru.sv  br_arb_weighted_pairwise_rr.sv  br_arb_weighted_rr.sv
arb/sim/: BUILD.bazel  br_arb_fixed_tb.sv  br_arb_grant_hold_tb.sv  br_arb_lru_tb.sv  br_arb_multi_rr_tb.sv  br_arb_pri_rr_tb.sv  br_arb_rr_tb.sv  br_arb_weighted_lru_tb.sv  br_arb_weighted_rr_tb.sv
bazel/: BUILD.bazel  asap7.bzl  br_verilog.bzl  util.py  verible.bzl  verilog.bzl  verilog_elab_test.bzl  verilog_elab_test.py  verilog_elab_test_impl.py  verilog_lint_test.py  verilog_rules.md  write_placeholder_tools.bzl  write_placeholder_verilog_runner_py.bzl  write_placeholder_verilog_test_py.bzl
bazel/verilog_env_test/: BUILD.bazel  README.md  fake_verilog_runner.py  fpv_sandbox_contents_test.sh  run_wrapper_test.sh  runner_env.sh  test_design.sv  (+2 more)
br_dv_lib/: BUILD.bazel  br_dv_agent.svh  br_dv_clk_rst_driver.svh  br_dv_clk_rst_if.sv  br_dv_component.svh  br_dv_context.svh  br_dv_driver.svh  br_dv_env.svh  br_dv_item_sink.svh  br_dv_lib_pkg.sv  br_dv_macros.svh  br_dv_monitor.svh  br_dv_port_sink.svh  br_dv_port_sink_target.svh  br_dv_scoreboard.svh  br_dv_sequence.svh  br_dv_sequence_base.svh  br_dv_test.svh  br_dv_types.svh  br_item.svh
cov/: BUILD.bazel  br_ready_valid_cg.sv  br_ready_valid_covgrp.sv
macros/: BUILD.bazel  br_asserts.sv  br_asserts.svh  br_asserts_in_pkg_test.sv  br_asserts_internal.sv  br_asserts_internal.svh  br_asserts_internal_impl_known_no_impl_fpv_repro.sv  br_asserts_internal_test.sv  br_asserts_test.sv  br_assign.svh  br_assign_test.sv  br_fv.svh  br_gates.svh  br_gates_cdc_rst_sync_fpv_repro.jg.tcl  br_gates_cdc_rst_sync_fpv_repro.sv  br_gates_test.sv  br_multicycle_path.svh  br_multicycle_path_tb.sv  br_registers.sv  br_registers.svh  br_tieoff.svh  br_tieoff_tb.sv  br_unused.svh  br_unused_tb.sv
pkg/: BUILD.bazel  br_ecc_pkg.sv  br_ecc_pkg_tb.sv  br_ecc_secded_pkg.sv  br_ecc_secded_pkg_tb.sv  br_math_pkg.sv  br_math_pkg_tb.sv
stitch/: BUILD.bazel  Cargo.toml  launcher.bzl
(+959 files in other folders)
