# Copyright 2024-2025 The Bedrock-RTL Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@python_versions//3.12:defs.bzl", compile_pip_requirements_3_12 = "compile_pip_requirements")

compile_pip_requirements_3_12(
    name = "requirements_3_12",
    src = "requirements_3_12.in",
    requirements_txt = "requirements_lock_3_12.txt",
)

exports_files(["elab_test_jg_custom_header.verific.tcl"])

test_suite(
    name = "nightly-jg-tests",
    tests = [
        "//arb/fpv:nightly-jg-tests",
        "//cdc/fpv:nightly-jg-tests",
        "//counter/fpv:nightly-jg-tests",
        "//credit/fpv:nightly-jg-tests",
    ],
)
