# SPDX-License-Identifier: Apache-2.0

load("@python_versions//3.12:defs.bzl", compile_pip_requirements_3_12 = "compile_pip_requirements")

compile_pip_requirements_3_12(
    name = "requirements_3_12",
    src = "requirements_3_12.in",
    requirements_txt = "requirements_lock_3_12.txt",
)

exports_files(["elab_test_jg_custom_header.verific.tcl"])

py_test(
    name = "check_env",
    srcs = ["check_env.py"],
)
