# SPDX-License-Identifier: Apache-2.0

load("@rules_hdl//verilog:providers.bzl", "verilog_library")
load("//bazel:br_verilog.bzl", "br_verilog_elab_and_lint_test_suite")

package(default_visibility = ["//visibility:public"])

verilog_library(
    name = "br_ready_valid_covgrp",
    srcs = ["br_ready_valid_covgrp.sv"],
    deps = [
        "//macros:br_asserts",
        "//macros:br_registers",
    ],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_ready_valid_covgrp_test_suite",
    # Parameter-sweep wrappers are passive and intentionally have no outputs.
    disable_lint_rules = ["NO_OUTPUT"],
    params = {
        "DataWidth": [
            "1",
            "8",
        ],
    },
    deps = [":br_ready_valid_covgrp"],
)
