# Copyright 2024 The Bedrock-RTL Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_hdl//verilog:providers.bzl", "verilog_library")
load("//bazel:verilog.bzl", "verilog_elab_test")

package(default_visibility = ["//visibility:private"])

verilog_library(
    name = "br_math_pkg",
    srcs = ["br_math_pkg.sv"],
    visibility = ["//visibility:public"],
)

verilog_library(
    name = "br_math_pkg_tb",
    srcs = ["br_math_pkg_tb.sv"],
    deps = [
        ":br_math_pkg",
        "//macros:br_asserts_internal",
    ],
)

verilog_elab_test(
    name = "br_math_pkg_elab_test",
    defines = ["SV_ASSERT_ON"],
    deps = [":br_math_pkg_tb"],
)
