# SPDX-License-Identifier: Apache-2.0

load("@bedrock_stitch//:defs.bzl", "all_crate_deps")
load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_rust//rust:defs.bzl", "rust_binary")
load("//stitch:launcher.bzl", "xls_dso_launcher")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "xls_lib",
    visibility = ["//visibility:public"],
)

rust_binary(
    name = "stitch_tool_bin",
    srcs = [
        "src/common.rs",
        "src/instantiate.rs",
        "src/main.rs",
    ],
    deps = [
        ":xls_lib",
    ] + all_crate_deps(normal = True),
)

xls_dso_launcher(
    name = "stitch_tool",
    binary = ":stitch_tool_bin",
    xls_dso = "@xlsynth_artifacts//:xls_dso",
)
