# SPDX-License-Identifier: Apache-2.0

[package]
name = "stitch"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
num-bigint = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
topstitch = "0.93.0"
